feat: add oidc-token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       packages: write
       # Required by cosign keyless signing
       id-token: write
-    uses: https://github.com/raulcabello/github-actions/blob/v1/.github/workflows/reusable-release-policy-rust.yml
+    uses: https://github.com/raulcabello/github-actions/.github/workflows/reusable-release-policy-rust.yml@v1
     with:
       input-wasm: allow_privilege_escalation_psp
       oci-target: ghcr.io/${{ github.repository_owner }}/policies/allow-privilege-escalation-psp
