--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - id: step1
         run: |
-          echo OIDC_TOKEN=$curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://AzureADTokenExchange" | jq -r '.value') >> $GITHUB_ENV
+          echo OIDC_TOKEN=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://AzureADTokenExchange" | jq -r '.value') >> $GITHUB_ENV
           echo "tokeenn ${{ env.OIDC_TOKEN }}"
           echo "::set-output name=token:${{ env.OIDC_TOKEN }}"
 
