--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
     uses: kubewarden/github-actions/.github/workflows/reusable-test-policy-rust.yml@v1
   oidc-token:
     name: Retrieve OIDC token
+    permissions:
+      # Required by cosign keyless signing
+      id-token: write
     runs-on: ubuntu-latest
     outputs:
       token: ${{ steps.step1.outputs.token }}
