--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - id: step1
         run: |
           echo "$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://AzureADTokenExchange" | jq -r '.value')"
-          echo "::set-output name=token::echoutputt"
+          echo "::set-output name=token::$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://AzureADTokenExchange" | jq -r '.value')"
 
   release:
     needs:
@@ -40,6 +40,6 @@ jobs:
     with:
       input-wasm: allow_privilege_escalation_psp
       oci-target: ghcr.io/${{ github.repository_owner }}/policies/allow-privilege-escalation-psp
-      oidc-token: ${{needs.oidc-token.outputs.token}}
     secrets:
       workflow-pat: ${{ secrets.WORKFLOW_PAT }}
+      oidc-token: ${{needs.oidc-token.outputs.token}}
