--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,4 +42,4 @@ jobs:
       oci-target: ghcr.io/${{ github.repository_owner }}/policies/allow-privilege-escalation-psp
     secrets:
       workflow-pat: ${{ secrets.WORKFLOW_PAT }}
-      oidc-token: $ACTIONS_ID_TOKEN_REQUEST_TOKEN
+      actions-id-token-request-token: $ACTIONS_ID_TOKEN_REQUEST_TOKEN
